vanilla: Fix running in production in paths with non-ASCII characters
This is not perfect -- there are still issues on JDK, but this improves the situation